# phonotaxis

./: .gitignore  CLAUDE.md  README.md  config_template.py  environment.yml  pyproject.toml
devel/: devel_alsa_samplerate.py  devel_arduino_analog_input.py  devel_latency_test.py  devel_multichannel_sound.py
docs/: state_matrix_guide.md
examples/: README.md  example_alsa_sound.py  example_arduino_analog_inputs.py  example_arduino_control_widget.py  example_gui_minimal.py  example_initzone_and_ports.py  example_load_data.py  example_load_video_tracking.py  example_read_centroid_file.py  example_read_video_frame.py  example_sound_on_roi.py  example_statematrix.py  example_video_tracking.py  example_water_on_poke.py
phonotaxis/: __init__.py  arduinomodule.py  controller.py  dispatcher.py  emulator.py  gui.py  savedata.py  sharedbuffer.py  soundmodule.py  statemachine.py  statematrix.py  utils.py  videomodule.py  videoworkers.py  widgets.py
phonotaxis/widgets/: __init__.py  arduino_control_widget.py  basic.py  session_info.py  slider_widget.py  video_widget.py
tests/: __init__.py  oldcode.py  test_arduino_analog_input.py  test_arduino_threshold.py  test_controller.py  test_dispatcher.py  test_gui_minimal.py  test_read_centroid_file.py  test_statemachine.py  test_statematrix.py  test_video_minimal.py  test_video_tracking.py  test_videothread.py
